--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ theme:
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: green
+      primary: teal
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
@@ -18,7 +18,7 @@ theme:
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: green
+      primary: teal
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
