--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ markdown_extensions:
   - attr_list
   - md_in_html
 plugins:
+    - search
     - redirects:
         redirect_maps:
             'index.md': 'getting-started/introduction.md'
