--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ edit_uri: /narrowlink/docs/blob/main/docs/
 copyright: Copyright &copy; 2023
 theme:
   name: material
+  custom_dir: overrides
   logo: assets/NarrowLink-fff.svg
   favicon: assets/NarrowLink-888.svg
   palette:
@@ -23,6 +24,7 @@ theme:
         icon: material/brightness-4
         name: Switch to light mode
   features:
+    - header.autohide
     - navigation.tabs
     - navigation.footer
     - content.action.edit
