--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,16 @@
 site_name: Narrowlink
 repo_url: https://github.com/narrowlink/
 edit_uri: /narrowlink/docs/blob/main/docs/
+repo_name: narrowlink
 copyright: Copyright &copy; 2023
 theme:
   name: material
   custom_dir: overrides
   logo: assets/NarrowLink-fff.svg
   favicon: assets/NarrowLink-888.svg
+  icon:
+    repo: fontawesome/brands/github
+
   palette:
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
