add site_url to mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Narrowlink
+site_url: https://docs.narrowlink.com/
 repo_url: https://github.com/narrowlink/
 edit_uri: /narrowlink/docs/blob/main/docs/
 repo_name: narrowlink
